[tool.poetry]
name = "sd-project"
version = "0.1.0"
description = ""
authors = ["Utricularor <mulberry.kzuki@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"

[tool.poetry.dependencies]
python = "^3.10.0"
torch = "*"
torchaudio = "*"
torchvision = "*"
Pillow = "*"
matplotlib = "*"
numpy = "*"
tqdm = "*"
scipy = "*"
scikit-learn = "*"
python-dotenv = "^1.0.0"
diffusers = "^0.24.0"
transformers = "^4.36.2"
sentencepiece = "^0.1.99"
accelerate = "^0.25.0"
flask = "^3.0.0"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
